change some logo/text to closed-social version

--- a/app/javascript/flavours/glitch/locales/cs.json
+++ b/app/javascript/flavours/glitch/locales/cs.json
@@ -1,5 +1,5 @@
 {
-  "about.fork_disclaimer": "Glitch-soc je svobodný software s otevřeným zdrojovým kódem založený na Mastodonu.",
+  "about.fork_disclaimer": "Closed-social je svobodný software s otevřeným zdrojovým kódem založený na Mastodonu.",
   "advanced_options.icon_title": "Pokročilá nastavení",
   "advanced_options.local-only.long": "Neposílat na jiné servery",
   "advanced_options.local-only.short": "Lokální příspěvek",
