--- a/app/javascript/flavours/glitch/locales/de.json
+++ b/app/javascript/flavours/glitch/locales/de.json
@@ -1,5 +1,5 @@
 {
-  "about.fork_disclaimer": "Glitch-soc ist freie, quelloffene Software geforkt von Mastodon.",
+  "about.fork_disclaimer": "Closed-social ist freie, quelloffene Software geforkt von Mastodon.",
   "account.add_account_note": "Notiz für @{name} hinzufügen",
   "account.disclaimer_full": "Die folgenden Informationen könnten das Profil des Nutzers unvollständig wiedergeben.",
   "account.follows": "Folgt",
