--- a/app/javascript/flavours/glitch/locales/defaultMessages.json
+++ b/app/javascript/flavours/glitch/locales/defaultMessages.json
@@ -156,7 +156,7 @@
   {
     "descriptors": [
       {
-        "defaultMessage": "Glitch-soc is free open source software forked from Mastodon.",
+        "defaultMessage": "Closed-social is free open source software forked from Mastodon.",
         "id": "about.fork_disclaimer"
       }
     ],
