--- a/app/javascript/flavours/glitch/locales/pt-BR.json
+++ b/app/javascript/flavours/glitch/locales/pt-BR.json
@@ -1,5 +1,5 @@
 {
-  "about.fork_disclaimer": "O Glitch-soc é um software gratuito de código aberto bifurcado a partir do Mastodon.",
+  "about.fork_disclaimer": "O Closed-social é um software gratuito de código aberto bifurcado a partir do Mastodon.",
   "account.add_account_note": "Adicionar nota para @{name}",
   "account.disclaimer_full": "As informações abaixo podem refletir o perfil do usuário de forma incompleta.",
   "account.follows": "Segue",
