--- a/app/javascript/flavours/glitch/locales/fr.json
+++ b/app/javascript/flavours/glitch/locales/fr.json
@@ -1,5 +1,5 @@
 {
-  "about.fork_disclaimer": "Glitch-soc est un logiciel gratuit et open source, fork de Mastodon.",
+  "about.fork_disclaimer": "Closed-social est un logiciel gratuit et open source, fork de Mastodon.",
   "account.add_account_note": "Ajouter une note pour @{name}",
   "account.disclaimer_full": "Les informations ci-dessous peuvent être incomplètes.",
   "account.follows": "Abonnements",
