--- a/app/javascript/flavours/glitch/locales/pt-PT.json
+++ b/app/javascript/flavours/glitch/locales/pt-PT.json
@@ -1,5 +1,5 @@
 {
-  "about.fork_disclaimer": "O Glitch-soc é um software livre de código aberto, derivado (fork) do Mastodon.",
+  "about.fork_disclaimer": "O Closed-social é um software livre de código aberto, derivado (fork) do Mastodon.",
   "account.add_account_note": "Juntar uma nota sobre @{name}",
   "account.disclaimer_full": "As informações abaixo podem não refletir completamente o perfil do utilizador.",
   "account.follows": "A seguir",
