--- a/app/javascript/flavours/glitch/locales/tai.json
+++ b/app/javascript/flavours/glitch/locales/tai.json
@@ -1,5 +1,5 @@
 {
-  "about.fork_disclaimer": "Glitch-soc is free open source software forked from Mastodon.",
+  "about.fork_disclaimer": "Closed-social is free open source software forked from Mastodon.",
   "account.add_account_note": "Add note for @{name}",
   "account.disclaimer_full": "Information below may reflect the user's profile incompletely.",
   "account.follows": "Follows",
